# Iron-Net

./: Cargo.toml  README.md
src/: algebra.rs  alloy.rs  anneal.rs  carbon.rs  concept.rs  concept_lm.rs  energy.rs  hierarchy.rs  hopfield.rs  iron_llm.rs  iron_mind.rs  lattice.rs  learned.rs  lib.rs  main.rs  multimodal.rs  spin.rs  training.rs
src/copper/: channel.rs  lattice.rs  mod.rs
